CSS for tables and links

--- a/Coco Puff Page.html
+++ b/Coco Puff Page.html
@@ -4,13 +4,20 @@
 <title>Coco Puff</title>
 
 <style type="text/css">
-	h1{color: #F3C412; text-align: center;}
+	h1{color: #F3C412; text-align: center;
+		border-color: #fbedb7;
+		border-width: 3px;
+		border-style: dashed;}
 	p {font-family: helvetica;
 		line-height: 170%;
-		text-indent: 25px;
-		color: white;}
-	body {background-color: #71635A;}
+		text-indent: 35px;
+		color: black;}
+	body {background-color: #B2AFAC;
+		font-family: helvetica;}
 	img {width: 400px;}
+	a:link {color:black; text-decoration: none;}
+	a:visited {color: #959492;}
+	ul{list-style-image: url("star list.jpeg"); width: 500px;}
 </style>
 
 </head>
@@ -19,6 +26,16 @@
 	<img src="Puff-images/coco baby picture.jpg">
 	<h1>Coco Puff</h1>
 	<p>Coco is black and tan short-haired chihuahua. Coco is black and tan short-haired chihuahua. Coco is black and tan short-haired chihuahua. Coco is black and tan short-haired chihuahua. Coco is black and tan short-haired chihuahua. Coco is black and tan short-haired chihuahua. Coco is black and tan short-haired chihuahua.</p>
+<a href="index.html">Puff Home</a>
 
+<ul>
+	<h4>Coco Puff's Favorite Things</h4>
+	<li>Food</li>
+	<li>Any food</li>
+	<li>Human Attention</li>
+	<li>ZZz</li>
+	<li>Cream Puff</li>
+
+</ul>
 </body>
 </html>
