--- a/Cream Puff Page.html
+++ b/Cream Puff Page.html
@@ -3,20 +3,22 @@
 <head>
 	<title>Cream Puff</title>
 	<style type="text/css">
-		h1 {color: #E5D9A7; text-align: center;}
+		h1 {color: #fbedb7; text-align: center; border-style: dashed; border-color: #F3C412;}
 		p {font-family: helvetica;
 			line-height: 170%;
-			text-indent: 25px;}
-		body{background-color: #71635A;
-			color: white;}
-			/*{background-image: url("Puff-images/Cream 1 year.jpg");}*/
+			text-indent: 35px;}
+		body{background-color: #B2AFAC;
+			/*{background-image:url(Puff-images/Cream 1 year.jpg);*/
+			background-size: 100px;
+			background-repeat: repeat-x;
+			background-position: 50%;
+			font-family: helvetica;}
 		img {width: 400px;}
-
-
+		a:link {color:black; text-decoration: none;}
+		a:visited {color: #959492;}
+		ul{border: 1px solid #F3C412; list-style-type: none; padding: 0px;}
 
 	</style>
-
-
 
 </head>
 <body>
@@ -24,5 +26,16 @@
 	<h1>Cream Puff</h1>	
 	<p>Cream Puff is a white and grey long-haired chihuahua. Cream Puff is a white and grey long-haired chihuahua. Cream Puff is a white and grey long-haired chihuahua. Cream Puff is a white and grey long-haired chihuahua. Cream Puff is a white and grey long-haired chihuahua. Cream Puff is a white and grey long-haired chihuahua.</p>
 
+<ul>
+<h4>Cream Puff's Favorite Things</h4>
+	<li>Food</li>
+	<li>ZZz</li>
+	<li>Human attention</li>
+	<li>Coco Puff</li>
+
+
+</ul>
+
+<a href="index.html">Puff Home</a>
 </body>
 </html>
