--- a/index122917.html
+++ b/index122917.html
@@ -6,25 +6,11 @@
 	<link rel="icon" type="image/png" href="stars medium yellow.png">
 	<!-- Lala Puff 12/31/17-->
 	<style type="text/css">
-		p{color: #959492;
-			font-family:helvetica;
-			margin: 10px;}
+		p{color:orange;
+			font-family:helvetica;}
 			ul{font-weight: bold;}
 			ol{font-style: italic;}
-		h4 {font-family: helvetica;
-			color: #42413D;
-			background-color: #fbedb7;
-			width: 800px;
-			height: 20px;
-			border: 3px dashed #fbedb7;}
-		a:link{color: #42414D;}
-		a:visited{color: #959492;}
-		a:hover{color: white; background-color: #F3C412;text-decoration: underline; font-weight: bold;}
-		a:active{background-color: #71635A;}
-		table{border: 3px dashed grey;}
-		tr{background-color: #fbedb7;}
-		td{border: 1px solid #f3c412;}
-		th{border: 1px solid #f3c412;}
+
 	
 	</style>
 
@@ -38,8 +24,6 @@
 
 	<br/><a href="#Whatmakesahoi"> What Makes a Hoi? </a>
 	<br/><a href="#The puffs in tables"> The puffs in tables</a>
-	<br/><a href="#Morning Routine">Morning Routine</a>
-
 
 	<h1>Hoi's what?</h1>
 	What is Hoi?
@@ -136,8 +120,6 @@
 
 This is normal text.
 <p>This is paragraph text.</p>
-
-<h4><a name="Morning Routine">Morning Routine</a></h4>
 
 </body>
 
