--- a/second page.html
+++ b/second page.html
@@ -11,7 +11,7 @@
 <a href="toc.html"> Table of Contents</a>
 <br/><br/>Hoi has a second page!
 
-<p><a href="index122917.html">Go back to the first page</a></p>
+<p><a href="index.html">Go back to the first page</a></p>
 
 </body>
 </html>
