--- a/toc.html
+++ b/toc.html
@@ -4,7 +4,7 @@
 <head><title>Table of Contents</title></head>
 
 <body>
-	<a href="index122917.html"> Go to First Page</a>
+	<a href="index.html"> Go to First Page</a>
 	<br/><br/><a href="second page.html"> Go to Second Page </a>
 </body>
 
