css changes to index and Morning Routine

--- a/Coco Puff Page.html
+++ b/Coco Puff Page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Coco Puff</title>
-
+<link rel="icon" type="image/png" href="stars medium yellow.png">
 <style type="text/css">
 	h1{color: #F3C412; text-align: center;
 		border-color: #fbedb7;
