--- a/Cream Puff Page.html
+++ b/Cream Puff Page.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Cream Puff</title>
+	<link rel="icon" type="image/png" href="stars medium yellow.png">
+
 	<style type="text/css">
 		h1 {color: #fbedb7; text-align: center; border-style: dashed; border-color: #F3C412;}
 		p {font-family: helvetica;
