--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 This is normal text.
 <p>This is paragraph text.</p>
 
-<h4><a name="Morning Routine">Morning Routine</a></h4>
+<h4><a name="Morning Routine" a href="Morning Routine.html" target=_blank>Morning Routine </a>
+</h4>
 
 </body>
 
