fixed indentation and added missing opening html

--- a/Daily Routine.html
+++ b/Daily Routine.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
-
+<html>
 <head>
-	<title>Morning Routine</title>
+	<title>Daily Routine</title>
 	<link rel="icon" type="image/png" href="stars medium yellow.png">
 <style type="text/css">
+	a:link {color:black; text-decoration: none; position: absolute;}
+	a:visited {color: #959492;}
 	h1,p {font-family: helvetica;}
 	h1 {text-align: center;}
 	p {color: #f3c412;
@@ -12,7 +14,8 @@
 	span{font-weight: bold;}
 	.yellow{color: #fbedb7; }
 	.darkyellow {color: #f3c412;}
-
+	#coffee {color: green; border: 2px solid #42413D; position: absolute; top: 350px; left: 30px;}
+	#Mondays {color: #fbedb7; border: 2px solid #42413D; position: absolute; top: 400px; left: 30px;}
 </style>
 
 </head>
@@ -23,19 +26,25 @@
 <ul>
 	<li class="yellow">Drink warm water with <span>Apple Cider Vinegar</span></li>
 	<li>Write down daily gratitudes</li>
-
+</ul>
 <p>Lunch...</p>
+<ul>
 	<li>Gym - cardio</li>
 	<li>Gym - weights</li>
-
+</ul>
 
 <p>Dinner...</p>
+<ul>
 	<li class="darkyellow">Write down to-dos for tomorrow</li>
 	<li>Meditate</li>
 </ul>
 
+<div id="coffee">Get Tall Starbucks Pike Place and Get Refill</div>
+<div id="Mondays">Stay Home on Mondays</div>
 
+<a href="index.html">Puff Home</a>
 	</body>
+
 
 
 
