--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<br/><a href="#Whatmakesahoi"> What Makes a Hoi? </a>
 	<br/><a href="#The puffs in tables"> The puffs in tables</a>
-	<br/><a href="#Morning Routine">Morning Routine</a>
+	<br/><a href="#Daily Routine">Daily Routine</a>
 
 
 	<h1>Hoi's what?</h1>
@@ -137,7 +137,7 @@
 This is normal text.
 <p>This is paragraph text.</p>
 
-<h4><a name="Morning Routine" a href="Morning Routine.html" target=_blank>Morning Routine </a>
+<h4><a name="Daily Routine" a href="Daily Routine.html" target=_blank>Daily Routine </a>
 </h4>
 
 </body>
