--- a/Daily Routine.html
+++ b/Daily Routine.html
@@ -5,7 +5,7 @@
 	<title>Daily Routine</title>
 	<link rel="icon" type="image/png" href="stars medium yellow.png">
 <style type="text/css">
-	a:link {color:black; text-decoration: none; position: absolute;}
+	a:link {color:black; text-decoration: none;}
 	a:visited {color: #959492;}
 	h1,p {font-family: helvetica;}
 	h1 {text-align: center;}
@@ -14,8 +14,8 @@
 	span{font-weight: bold;}
 	.yellow{color: #fbedb7; }
 	.darkyellow {color: #f3c412;}
-	#coffee {color: green; border: 2px solid #42413D; position: absolute; top: 350px; left: 30px;}
-	#Mondays {color: #fbedb7; border: 2px solid #42413D; position: absolute; top: 400px; left: 30px;}
+	#coffee {color: green; border: 2px solid #42413D; margin: 3px;}
+	#Mondays {color: #fbedb7; border: 2px solid #42413D; margin: 3px;}
 </style>
 
 </head>
@@ -41,9 +41,11 @@
 
 <div id="coffee">Get Tall Starbucks Pike Place and Get Refill</div>
 <div id="Mondays">Stay Home on Mondays</div>
-
+<br/>
+<br/>
+<br/>
 <a href="index.html">Puff Home</a>
-	</body>
+</body>
 
 
 
