--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		tr{background-color: #fbedb7;}
 		td{border: 1px solid #f3c412;}
 		th{border: 1px solid #f3c412;}
+		p:first-letter{font-size: 30px;}
 	
 	</style>
 
@@ -137,8 +138,12 @@
 This is normal text.
 <p>This is paragraph text.</p>
 
-<h4><a name="Daily Routine" a href="Daily Routine.html" target=_blank>Daily Routine </a>
-</h4>
+<h4><a name="Daily Routine" a href="Daily Routine.html" target=_blank>Daily Routine </a></h4>
+
+
+<p>04/24/2018</p>
+<p>Just one more hour of html video!</p>
+
 
 </body>
 
