--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	<br/><a href="#Whatmakesahoi"> What Makes a Hoi? </a>
 	<br/><a href="#The puffs in tables"> The puffs in tables</a>
 	<br/><a href="#Daily Routine">Daily Routine</a>
+	<br/><a href="#To Do">To Do</a>
 
 
 	<h1>Hoi's what?</h1>
@@ -143,6 +144,9 @@ This is normal text.
 
 <p>04/24/2018</p>
 <p>Just one more hour of html video!</p>
+
+<h4><a name="To Do" a href="To Do.html" target=_blank>To Do</a></h4>
+
 
 
 </body>
