added position fixed to index

--- a/To Do.html
+++ b/To Do.html
@@ -3,10 +3,11 @@
 <head>
 	<title>To Do</title>
 	<link rel="stylesheet" type="text/css" href="Hoi.css">
+	<link rel="icon" type="image/png" href="stars medium yellow.png">
 	<style type="text/css">
 		#code {border: 2px solid #f3c412; position: absolute; top: 30px; left: 10px; width: 100px; height: 200px;}
 		#job {border: 3px solid #f3c412; position: absolute; top:60px; left: 30px; width: 70px; height: 150px;}
-		#HoiBuilds {border: 3px solid #f3c412; position: absolute; top:300px; left: 30px; width: 70px; height: 150px;}
+		#HoiBuilds {border: 3px solid #f3c412; position: relative; top:300px; left: 30px; width: 70px; height: 150px;}
 		p> a {position: absolute; top: 500px; left: 5px;}
 	</style>
 </head>
