--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 		td{border: 1px solid #f3c412;}
 		th{border: 1px solid #f3c412;}
 		p:first-letter{font-size: 30px;}
+		#fixed {border: 2px solid black; position: fixed; top: 50px; left: 50px;}
+
 	
 	</style>
 
@@ -147,6 +149,7 @@ This is normal text.
 
 <h4><a name="To Do" a href="To Do.html" target=_blank>To Do</a></h4>
 
+<p id="fixed">HOI!</p>
 
 
 </body>
