forms and password

--- a/Daily Routine.html
+++ b/Daily Routine.html
@@ -73,9 +73,12 @@ Write down daily gratitudes
 		<option value="good"> Good day!</option>>
 		<option value="ok"> Ok day!</option>
 		<option value="better"> Tomorrow will be better!</option>
-
 	</select>
-
+	<br/>
+	<h3>How do I make today great?</h3>
+	<textarea name="today" rows="10" cols="55">
+	I can make today the best day ever by...		
+	</textarea>
 </form>
 <br/>
 <br/>
