--- a/To Do.html
+++ b/To Do.html
@@ -5,9 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="Hoi.css">
 	<link rel="icon" type="image/png" href="stars medium yellow.png">
 	<style type="text/css">
-		#code {border: 2px solid #f3c412; position: absolute; top: 30px; left: 10px; width: 100px; height: 200px;}
-		#job {border: 3px solid #f3c412; position: absolute; top:60px; left: 30px; width: 70px; height: 150px;}
-		#HoiBuilds {border: 3px solid #f3c412; position: relative; top:300px; left: 30px; width: 70px; height: 150px;}
+		#code {border: 2px solid #f3c412; position: relative; top: 30px; left: 10px; width: 100px; height: 30px;}
+		#job {border: 3px solid #f3c412; position: absolute; top:40px; left: 180px; width: 100px; height: 30px;}
+		#HoiBuilds {border: 3px solid #f3c412; position: absolute; top:40px; left: 320px; width: 100px; height: 30px;}
 		p> a {position: absolute; top: 500px; left: 5px;}
 	</style>
 </head>
@@ -16,6 +16,24 @@
 <div id="code">#100daysofcode</div>
 <div id="job">Next Product Job</div>
 <div id="HoiBuilds">Hoi Builds</div>
+
+<br/>
+<br/>
+<br/>
+<form action="dosomething" method="post">
+	Username: <input type="text" name="username">
+	<br/>
+	Password: <input type="password" name="password" >
+	<br/>
+	<input type="submit" value="submit">
+	<br/>
+
+	<p>Upload a file for Hoi! </p>
+	<input type="file" name="Hoifile">
+
+</form>
+
+
 
 <p><a href="index.html">Puff Home</a></p>
 </body>
